--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,3 +17,4 @@ jobs:
         server: ftp.sandtproduction.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
+        server-dir: /sandtproduction
